# underworld3

./: .gitignore  .gitmodules  .pixi  .readthedocs.yaml  .zenodo.json  ADVECTION_REGRESSION_ANALYSIS.md  ANISOTROPIC_TENSOR_PATTERN.md  ARCHITECTURE_ANALYSIS_UNITS_PROTOCOL.md  AUTOMATIC-LAMBDIFICATION-OPTIMIZATION.md  BUG-gradient-projection-with-reference-units.md  BUG_QUEUE_UNITS_REGRESSIONS.md  CHANGES.md  CLAUDE.md  COMPLETE_ANALYSIS_INDEX.md  COMPREHENSIVE_SECONDARY_ISSUES_ANALYSIS.md  CONTRIBUTING.md  DEPRECATED_METHODS_USAGE_AUDIT.md  DEPRECATION_FIXES_REPORT.md  DERIVATIVE_UNITS_SUMMARY.md  DIMENSIONALITY_BUG_FIXES.md  DIMENSIONALITY_CHANGES_LOG.md  Dockerfile  Dockerfile_base  EVALUATE_FIXES_SUMMARY.md  EXPLICIT-MODEL-UNITS-DESIGN.md  FINAL_CLEANUP_SUMMARY.md  FINAL_UNWRAP_INVESTIGATION_REPORT.md  JOSS_Checklist.md  LAMBDIFY-OPTIMIZATION-TEST-COVERAGE.md  LICENCE.md  LIGHTWEIGHT_UNITAWAREARRAY_USAGE.md  MATHEMATICAL_MIXIN_FINAL_SUMMARY.md  MATHEMATICAL_MIXIN_FIX_STATUS.md  MIXIN_SEPARATION_ANALYSIS.md  ND_SCALING_TEST_REPORT.md  PARALLEL_SAFETY_IMPLEMENTATION.md  PARAMETER_ROLLOUT_STATUS.md  PARAMETER_UNITS_PROGRESS.md  PHASE_4_COMPLETE_SUMMARY.md  PHASE_4_FINAL_STATUS.md  (+72 more)
.binder/: Dockerfile  apt.txt  disabled_environment.yml  environment.yml  postBuild  requirements.txt  start
.devcontainer/: DOCKERFILE_GHCS  devcontainer.json  uw_environment.yml
.github/: CODEOWNERS  CONTRIBUTING.md
Documentation/: ConstitutiveModels_Anisotropy.md  ConstitutiveModels_Introduction.md  Introduction.md  My Library.bib  Numerical_Methods.md  Solvers_Equation_Systems.md  Solvers_SNES_interface.md  UnderworldDocumentation.bib  Visualisation.qmd  _toc.yml  myst.yml
HelpfulBatBot/: .dockerignore  .env.example  .gitignore  AUTO_PORT_DETECTION.md  CLAUDE_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  HelpfulBat_README.md  HelpfulBat_app.py  HelpfulBat_policy.typ  HelpfulBat_refreshment.py  HelpfulBat_workflow.yml  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RENAMING_SUMMARY.md  analyze_content.py  ask.py  demo.sh  fly.toml  inspect_index.py  quick_test.py  requirements.txt  simple_test.py  start_bot.sh  test_locally.sh  test_query.sh
Jupyterbook/: Bibliography.md  CiteEveryReference.md  FrontPage.md  Glossary.md  JupyterBook.bib  README.md  UnderworldManual.bib  _config.yml  _toc.yml  build_book.sh
Old_Documentation/: Ex_Anisotropy.ipynb  My Library.bib  _quarto.yml
QuickStartGuide/: ConstitutiveModels_Anisotropy.qmd
Quick_Start_Docs_api/: search.js  underworld3.html
binder/: postBuild  requirements.txt  start
conda/: conda_build_config.yaml  environment.yml  meta.yaml  meta.yaml.broken  run_test.sh
container/: Containerfile  Dockerfile.base  Dockerfile.base.optimized  Dockerfile.branch  Dockerfile.deps  README.md  launch-container.sh
development/: index.html  searchindex.js
development_api/: search.js  underworld3.html
docs/: QUARTO-DOCUMENTATION-PROPOSAL.md  QUARTO-IMPLEMENTATION-ASSESSMENT.md  QUARTO-IMPLEMENTATION-PROGRESS.md  _quarto.yml  _variables.yml  build-docs.sh  conf.py  index.md  index.qmd
docs_legacy/: _quarto.yml
examples/: EX_Swarm.ipynb  Ex_Evaluate.py  Ex_Poisson-AuxSourceTerm.py  Ex_Poisson-dmAux-1.py  Ex_Poisson-dmAux-2.py  Ex_Poisson.ipynb  Ex_Poisson.py  Ex_Poisson_Cartesian.py  Ex_Poisson_Spherical.py  Ex_Poisson_dmAux_proto.py  Ex_Spherical_Poisson.py  Ex_Spherical_mesh.ipynb  Ex_Stokes-FallingBall.py  Ex_Stokes-MaterialField.py  Ex_Stokes-RT.py  Ex_Stokes.py  Ex_Stokes_Cartesian_FallingBall.py  Ex_Stokes_Cartesian_RT.py  Ex_Stokes_Cartesian_SolC.py  Ex_Stokes_Cartesian_SolNL.py  Ex_Stokes_Spherical.py  Ex_Stokes_Spherical_WIP.py  NEx_Stokes_pyvista.ipynb  Pure_UW.ipynb  Swarm.ipynb  diagnose_evaluate_detailed.py  diagnose_evaluate_detailed_breakdown.py  diagnose_evaluate_performance.py  diagnose_evaluate_simple.py  plot.py  pureuw.py  rt_profiling.py  timing_petsc_integration.py
joss-paper/: JOSS_Checklist.md  paper.bib  paper.html  paper.md
main/: .buildinfo  Bibliography.html  CiteEveryReference.html  FrontPage.html  Glossary.html  genindex.html  objects.inv  search.html
main_api/: index.html  search.js  underworld3.html
outdated/: Dockerfile  pyproject.toml.dead
output/: README.md
petsc-custom/: README.md  build-petsc-kaiju.sh  build-petsc.sh  petsc
planning/: CLEANUP_PLAN_2025-11.md  CODEBASE_COLLECTIVE_ANALYSIS.md  COORDINATE_ACCESS_AUDIT.md  COORDINATE_INTERFACE_FIXES.md  EXPRESSION_SYMPIFY_FIX.md  GEOGRAPHIC_API_FINAL.md  HUMAN_READABLE_MODEL_UNITS.md  MESH_X_COORDS_MIGRATION_COMPLETE.md  ND_SCALING_UX_ENHANCEMENTS.md  ND_SOLVER_IMPLEMENTATION_PLAN.md  NOTEBOOK_12_UPDATES.md  PARALLEL_PRINTING_DESIGN.md  PARALLEL_PRINT_SIMPLIFIED.md  (+18 more)
(+1719 files in other folders)
