[metadata]
name = underworld3
version = 0.98b

#[build_ext]
#inplace = True

[options]
zip_safe = True
install_requires = 
  xxhash
  numpy >=1.20
  scipy
  cython
  sympy >=1.12
  typeguard
  petsc4py >=3.20
  mpi4py
  gmsh
  pint
  psutil
  typing_extensions
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
