[metadata]
name = underworld3
#version = attr: underworld3.__version__

#[build_ext]
#inplace = True

[options]
zip_safe = True
install_requires = 
  xxhash
  numpy
  scipy
  pykdtree
  cython
  sympy >=1.12
  typeguard
  petsc4py >=3.20
  mpi4py
  # gmsh ### does not work on linux arm architecture but can be installed through conda instead
  pint
  psutil
  typing_extensions

package_dir =
    = src
packages = find:

[options.packages.find]
where = src
