[metadata]
name = underworld3
#version = attr: underworld3.__version__

#[build_ext]
#inplace = True

[options]
zip_safe = True
install_requires =
  xxhash
  numpy
  scipy
  pykdtree
  cython
  sympy >=1.12
  pydantic
  pyyaml
  petsc4py >=3.20
  mpi4py
  # gmsh ### does not work on linux arm architecture but can be installed through conda instead
  pint
  psutil
  typing_extensions

package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[tool:pytest]
filterwarnings =
    # Suppress NumPy 2.0 deprecation warnings about __array_wrap__
    # These come from our custom array classes (NDArray_With_Callback etc.)
    # TODO: Update __array_wrap__ signature when we migrate to NumPy 2.0
    ignore:__array_wrap__ must accept context and return_scalar:DeprecationWarning
    # Suppress other noisy warnings during test runs
    ignore::DeprecationWarning:pyvista
    ignore::DeprecationWarning:vtk
